--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@
 body{
   margin: 0;
   font-family: 'Raleway', sans-serif;
+  background-image: url("images/background.jpg");
+  background-position: center;
 }
 /* mobile responsivness */
 header{
@@ -11,7 +13,8 @@ header{
   background-size: cover;
   height: 300px;
   top: 0;
-  margin-top:-15px;
+  margin-top:-25px;
+  border-bottom: 5px solid black;
 }
 .navigation{
   display: flex;
@@ -21,6 +24,7 @@ header{
   z-index: 1;
   width: 100%;
   top:20px;
+
 }
 .navigation-mobile{
   display: flex;
@@ -30,6 +34,8 @@ header{
   width: 100%;
   height: 65px;
   z-index: 5;
+  border: 1px solid #fff;
+
 }
 .logotype{
   display: flex;
@@ -90,7 +96,9 @@ nav a{
   transform: rotate(45deg) translate(-8px, -8px);
 }
 /*  end of toggle button */
-
+#join-club{
+  color: rgb(234 208 23);
+}
 header p{
   position: relative;
   color: #fff;
@@ -106,6 +114,7 @@ header a{
   font-size: 1.5rem;
 }
 
+
 @media only screen and (min-width: 600px) {
   #menuToggler {
     display: none;
@@ -114,6 +123,12 @@ header a{
     flex-direction: row;
     background-color: #000;
     height: 65px;
+    border: 1px solid #fff;
+    border-left: 0;
+    border-right: 0;
+  }
+  .navigation-mobile{
+    border: none;
   }
   #mainNav{
     display: flex;
@@ -127,9 +142,24 @@ header a{
   #mainNav a{
     font-size: 1.4rem;
   }
+  #join-club:hover{
+    font-size: 1.8rem;
+  }
 
 }
 
 @media only screen and (min-width: 800px) {
+    header{
+      height: 350px;
+      background-position: center;
+    }
+    header p{
+      top: 40%;
+      text-align: right;
+      background-color: rgb(0 0 0 / 0%);
+      max-width: 40%;
+      right: -50%;
+      font-size: 1.5rem;
+    }
     #only-desktop{display: contents;}
 }
