--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,10 @@
 body{
   margin: 0;
   font-family: 'Raleway', sans-serif;
-  background-image: url("images/background.jpg");
+  //background-image: url("images/background_1.jpg");
+  background-color: rgb(47 95 53 / 55%);
   background-position: center;
+  color: #fff;
 }
 /* mobile responsivness */
 header{
@@ -14,7 +16,7 @@ header{
   height: 400px;
   top: 0;
   margin-top:-25px;
-  border-bottom: 5px solid black;
+  border-bottom: 10px solid black;
 }
 .navigation{
   display: flex;
@@ -112,7 +114,72 @@ header a{
   text-decoration: none;
   color: #fff;
   font-size: 1.5rem;
+  //padding: 10px 0;
 }
+
+main{
+  display: flex;
+  justify-content: center;
+}
+.events{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 50px;
+  align-items: center;
+}
+.headings{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.headings h2{
+  background-color: black;
+  padding: 10px;
+  margin: 0;
+  width: 60%;
+  border: 1px solid rgb(234 208 23);
+}
+.headings h3{
+  background-color: rgb(234 208 23);
+  padding: 10px;
+  margin: 0;
+  color: #000;
+  width: 40%;
+  border: 1px solid #000;
+
+}
+.event-dates{
+  margin-top: 30px;
+  display: grid;
+  grid-template: 1fr 1fr / 1fr;
+  grid-gap: 1rem;
+  justify-items: center;
+
+}
+
+.event-dates div{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+}
+.event-dates p{
+  width: 100%;
+  font-weight: bolder;
+  background-color: black;
+  margin: 0;
+  border-bottom: 1px solid rgb(234 208 23);
+  padding: 30px 0 ;
+  text-align: center;
+}
+
+.event-dates img{
+  max-width: 100%;
+}
+
 
 
 @media only screen and (min-width: 600px) {
@@ -145,6 +212,9 @@ header a{
   #join-club:hover{
     font-size: 1.8rem;
   }
+  .event-dates div{
+    max-width: 80%;
+  }
 
 }
 
@@ -162,4 +232,12 @@ header a{
       font-size: 1.5rem;
     }
     #only-desktop{display: contents;}
+    .event-dates{
+      margin-top: 30px;
+      display: grid;
+      grid-template: 1fr / 1fr 1fr ;
+      grid-gap: 1rem;
+      justify-items: center;
+
+    }
 }
