about us and join

--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@
 body{
   margin: 0;
   font-family: 'Raleway', sans-serif;
-  //background-image: url("images/background_1.jpg");
-  background-color: rgb(47 95 53 / 55%);
+  background-image: url("images/background_1.jpg");
+  //background-color: rgb(66 74 67);
   background-position: center;
   color: #fff;
 }
@@ -53,7 +53,7 @@ header{
 }
 #only-desktop{display: none;}
 #mainNav{
-  transform:translate(100vw);
+  transform:translate(100vh);
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -62,6 +62,7 @@ header{
   width: 100%;
   background-color: rgb(0 0 0 / 80%);
   top:0;
+  transition: 3s;
 }
 nav a{
   text-decoration: none;
@@ -70,7 +71,7 @@ nav a{
 }
 #mainNav.nav-opened{
   transform:translateX(0);
-  height: 60vh;
+  height: 70vh;
   transition: 0.7s;
   /*  */
 }
@@ -120,6 +121,7 @@ header a{
 main{
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 .events{
   display: flex;
@@ -134,14 +136,14 @@ main{
   justify-content: center;
   align-items: center;
 }
-.headings h2{
+.headings h2, .join-us h2{
   background-color: black;
   padding: 10px;
   margin: 0;
   width: 60%;
   border: 1px solid rgb(234 208 23);
 }
-.headings h3{
+.headings h3, .about-us h2{
   background-color: rgb(234 208 23);
   padding: 10px;
   margin: 0;
@@ -165,6 +167,9 @@ main{
   justify-content: center;
   align-items: center;
   max-width: 100%;
+  min-width: 330px;
+  border: 1px solid black;
+  margin-top: 20px;
 }
 .event-dates p{
   width: 100%;
@@ -179,9 +184,70 @@ main{
 .event-dates img{
   max-width: 100%;
 }
+/*  about and join */
 
+.about-join{
+  margin-top: 50px;
+  display: grid;
+  grid-template: 1fr 1fr/ 1fr;
 
+}
+.about-us, .join-us{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.about-us h2, .join-us h2{
+  width: 100%;
+  text-align: center;
+}
 
+.about-us p{
+  max-width: 500px;
+  font-size: 1.5rem;
+  text-align: center;
+  background-color: rgb(0 0 0 / 47%);
+  line-height: 1.8;
+}
+.joining-form{
+  display: grid;
+  margin: 80px 0;
+  justify-items: center;
+  align-content: center;
+  background-color: rgb(0 0 0 / 77%);
+  padding: 15px;
+  border-radius: 20px;
+  width: 70%;
+}
+
+label{
+  font-size: 1.2rem;
+}
+
+.joining-form input{
+  width: 200px;
+  height: 35px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+
+}
+
+button{
+  padding: 15px;
+  border-radius: 30%;
+  border: 1px solid black;
+  background-color: rgb(234 208 23);
+  font-family: inherit;
+  font-weight: bolder;
+  font-size: 1.4rem;
+  margin: 10px;
+}
+button:hover{
+  border: 1px solid rgb(234 208 23);
+  background-color: black;
+  color: white;
+
+}
 @media only screen and (min-width: 600px) {
   #menuToggler {
     display: none;
@@ -204,18 +270,28 @@ main{
     text-align: center;
     transform:translateY(0);
     background-color: #000;
-
   }
+
   #mainNav a{
     font-size: 1.4rem;
   }
+
   #join-club:hover{
     font-size: 1.8rem;
   }
+
   .event-dates div{
     max-width: 80%;
   }
 
+  .about-us p{
+    min-width: 350px;
+    max-width: 500px;
+  }
+  .about-us h2, .join-us h2{
+    width: 90%;
+    text-align: center;
+  }
 }
 
 @media only screen and (min-width: 800px) {
@@ -238,6 +314,10 @@ main{
       grid-template: 1fr / 1fr 1fr ;
       grid-gap: 1rem;
       justify-items: center;
+    }
+
+    .about-join{
+      grid-template: 1fr / 1fr 1fr;
 
     }
 }
