--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,7 @@ main{
 /*  about and join */
 
 .about-join{
-  margin-top: 50px;
+  margin-top: 60px;
   display: grid;
   grid-template: 1fr 1fr/ 1fr;
 
@@ -222,6 +222,7 @@ main{
 
 label{
   font-size: 1.2rem;
+  margin-bottom: 5px;
 }
 
 .joining-form input{
@@ -229,7 +230,9 @@ label{
   height: 35px;
   border-radius: 10px;
   margin-bottom: 20px;
-
+  background-color: rgb(0 0 0 / 58%);
+  color: rgb(234 208 23);
+  font-size: 1rem;
 }
 
 button{
