--- a/styles.css
+++ b/styles.css
@@ -143,9 +143,7 @@ main{
   width: 60%;
   border: 1px solid rgb(234 208 23);
 }
-/* .headings h2, .headings h3{
-  padding: 10px;
-} */
+
 .headings h3, .about-us h2{
   background-color: rgb(234 208 23);
   padding: 10px 0;
@@ -217,7 +215,7 @@ main{
   margin: 80px 0;
   justify-items: center;
   align-content: center;
-  background-color: rgb(0 0 0 / 77%);
+  /* /background-color: rgb(0 0 0 / 77%); */
   padding: 15px;
   border-radius: 20px;
   width: 70%;
@@ -225,7 +223,7 @@ main{
 
 label{
   font-size: 1.2rem;
-  margin-bottom: 5px;
+  margin: 15px 0;
 }
 
 .joining-form input{
@@ -233,7 +231,8 @@ label{
   height: 35px;
   border-radius: 10px;
   margin-bottom: 20px;
-  background-color: rgb(0 0 0 / 58%);
+  background-color: rgb(0 0 0 / 78%);
+  border: 1px solid rgb(234 208 23);
   color: rgb(234 208 23);
   font-size: 1rem;
 }
@@ -252,7 +251,6 @@ button:hover{
   border: 1px solid rgb(234 208 23);
   background-color: black;
   color: white;
-
 }
 @media only screen and (min-width: 600px) {
   #menuToggler {
