--- a/styles.css
+++ b/styles.css
@@ -229,7 +229,6 @@ label{
 .joining-form input{
   width: 200px;
   height: 35px;
-  border-radius: 10px;
   margin-bottom: 20px;
   background-color: rgb(0 0 0 / 78%);
   border: 1px solid rgb(234 208 23);
@@ -251,6 +250,27 @@ button:hover{
   border: 1px solid rgb(234 208 23);
   background-color: black;
   color: white;
+}
+/* footer - contact*/
+
+footer{
+  height: 280px;
+  border-top: 1px solid #fff;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+footer #logo{
+  margin: 15px;
+}
+.icons img{
+  width: 60px;
+
+}
+span{
+  font-weight: bolder;
 }
 @media only screen and (min-width: 600px) {
   #menuToggler {
@@ -296,6 +316,7 @@ button:hover{
     width: 90%;
     text-align: center;
   }
+
 }
 
 @media only screen and (min-width: 800px) {
