--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ body{
   margin: 0;
   font-family: 'Raleway', sans-serif;
   background-image: url("images/background_1.jpg");
-  //background-color: rgb(66 74 67);
   background-position: center;
   color: #fff;
 }
@@ -46,7 +45,7 @@ header{
   font-weight: bolder;
   text-transform: uppercase;
 }
-#logo{
+.logo{
   width: 80px;
   border-radius: 50%;
   margin:0 10px;
@@ -115,7 +114,6 @@ header a{
   text-decoration: none;
   color: #fff;
   font-size: 1.5rem;
-  //padding: 10px 0;
 }
 
 main{
@@ -261,8 +259,9 @@ footer{
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
-footer #logo{
+footer .logo{
   margin: 20px;
 }
 .icons img{
@@ -298,6 +297,9 @@ span{
 
   #mainNav a{
     font-size: 1.4rem;
+  }
+  #mainNav a:hover{
+    color: rgb(234 208 23);;
   }
 
   #join-club:hover{
